@@ -20,6 +20,7 @@
 	aHW_NAME[13]='Odroid U3'
 	aHW_NAME[14]='Odroid N1'
 	aHW_NAME[15]='Odroid N2'
+	aHW_NAME[16]='Odroid C4'
 	aHW_NAME[20]='x86_64 VM'
 	aHW_NAME[21]='x86_64 PC'
 	aHW_NAME[22]='Generic Device'
