@@ -461,8 +461,8 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 		aSOFTWARE_CATEGORY_INDEX[$software_id]=2
 		aSOFTWARE_ONLINEDOC_URL[$software_id]='p=43#p43'
 		aSOFTWARE_REQUIRES_ALSA[$software_id]=1
-		# Odroid N2 has not GPU support for Xserver, hence it's not required for Kodi
-		(( $G_HW_MODEL == 15 )) || aSOFTWARE_REQUIRES_XSERVERXORG[$software_id]=1
+		# Odroid N2+C4 have not GPU support for Xserver, hence it's not required for Kodi
+		[[ $G_HW_MODEL == 1[56] ]] || aSOFTWARE_REQUIRES_XSERVERXORG[$software_id]=1
 		# Only RPi + Odroid + x86_64
 		for ((i=22; i<=$MAX_G_HW_MODEL; i++))
 		do
@@ -483,8 +483,8 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 
 		aSOFTWARE_NAME[$software_id]='ympd'
 		aSOFTWARE_DESC[$software_id]='lightweight web interface music player for mpd'
-		aSOFTWARE_CATEGORY_INDEX[$software_id]=2
 		aSOFTWARE_TYPE[$software_id]=0
+		aSOFTWARE_CATEGORY_INDEX[$software_id]=2
 		aSOFTWARE_REQUIRES_ALSA[$software_id]=1
 		aSOFTWARE_ONLINEDOC_URL[$software_id]='p=50#p50'
 		#------------------
@@ -525,8 +525,8 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 
 		aSOFTWARE_NAME[$software_id]='Subsonic'
 		aSOFTWARE_DESC[$software_id]='web interface media streaming server'
-		aSOFTWARE_CATEGORY_INDEX[$software_id]=2
 		aSOFTWARE_TYPE[$software_id]=0
+		aSOFTWARE_CATEGORY_INDEX[$software_id]=2
 		aSOFTWARE_REQUIRES_ALSA[$software_id]=1
 		aSOFTWARE_REQUIRES_FFMPEG[$software_id]=1
 		aSOFTWARE_REQUIRES_JAVA_JRE_JDK[$software_id]=1
@@ -539,16 +539,16 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 
 		aSOFTWARE_NAME[$software_id]='Logitech Media Server'
 		aSOFTWARE_DESC[$software_id]='aka LMS, Squeezebox Server'
-		aSOFTWARE_CATEGORY_INDEX[$software_id]=2
 		aSOFTWARE_TYPE[$software_id]=0
+		aSOFTWARE_CATEGORY_INDEX[$software_id]=2
 		aSOFTWARE_ONLINEDOC_URL[$software_id]='p=1009#p1009'
 		#------------------
 		software_id=36
 
 		aSOFTWARE_NAME[$software_id]='SqueezeLite'
 		aSOFTWARE_DESC[$software_id]='audio player for lms & squeezebox'
-		aSOFTWARE_CATEGORY_INDEX[$software_id]=2
 		aSOFTWARE_TYPE[$software_id]=0
+		aSOFTWARE_CATEGORY_INDEX[$software_id]=2
 		aSOFTWARE_REQUIRES_ALSA[$software_id]=1
 		aSOFTWARE_ONLINEDOC_URL[$software_id]='p=1009#p1009'
 		#------------------
@@ -3660,13 +3660,16 @@ _EOF_
 			# Odroids
 			if [[ $G_HW_MODEL == 1[0-9] ]]; then
 
-				# Odroid C2+N2: aml-libs-odroid
-				[[ $G_HW_MODEL == 1[25] ]] && package_list+=' aml-libs-odroid'
+				# Odroid C2+N2+C4: aml-libs-odroid
+				[[ $G_HW_MODEL == 1[256] ]] && package_list+=' aml-libs-odroid'
+
+				# Odroid N1: librockchip-mpp1
+				[[ $G_HW_MODEL == 11 ]] && package_list+=' librockchip-mpp1'
 
 				# Odroid N2: https://github.com/MichaIng/DietPi/issues/3255
 				if (( $G_HW_MODEL == 15 )); then
 
-					package_list+=' malig52-fbdev-opencl-odroid kodi-n2-fbdev-odroid'
+					package_list+=' malig52-fbdev-opencl-odroid kodi-aml-fbdev-odroid'
 					echo 'media_clock
 firmware
 decoder_common
@@ -3685,6 +3688,29 @@ amvdec_mmpeg4
 amvdec_real
 amvdec_vc1
 amvdec_vp9' > /etc/modules-load.d/dietpi-n2-kodi.conf
+
+				# Odroid C4
+				elif (( $G_HW_MODEL == 16 )); then
+
+					package_list+=' malig31-fbdev-opencl-odroid kodi-aml-fbdev-odroid'
+					echo 'media_clock
+firmware
+decoder_common
+stream_input
+amvdec_avs
+amvdec_h264
+amvdec_h264_4k2k
+amvdec_mh264
+amvdec_h264mvc
+amvdec_h265
+amvdec_mjpeg
+amvdec_mmjpeg
+amvdec_mpeg12
+amvdec_mpeg4
+amvdec_mmpeg4
+amvdec_real
+amvdec_vc1
+amvdec_vp9' > /etc/modules-load.d/dietpi-c4-kodi.conf
 
 				else
 
@@ -13207,12 +13233,12 @@ _EOF_
 		if (( ${aSOFTWARE_INSTALL_STATE[$software_id]} == -1 )); then
 
 			Banner_Uninstalling
-			#apt-mark auto libcec4 libcurl3-gnutls libnfs* # Odroid N2: aml-libs-odroid malig52-fbdev-opencl-odroid
-			G_AGP kodi kodi-odroid kodi-n2-fbdev-odroid
+			G_AGP kodi kodi-odroid kodi-n2-fbdev-odroid kodi-aml-fbdev-odroid
 			[[ -f '/usr/share/applications/kodi.desktop' ]] && rm /usr/share/applications/kodi.desktop
 			rm -f /{root,home/*}/Desktop/kodi.desktop
 			[[ -f '/etc/udev/rules.d/99-dietpi-kodi.rules' ]] && rm /etc/udev/rules.d/99-dietpi-kodi.rules
 			[[ -f '/etc/modules-load.d/dietpi-n2-kodi.conf' ]] && rm /etc/modules-load.d/dietpi-n2-kodi.conf
+			[[ -f '/etc/modules-load.d/dietpi-c4-kodi.conf' ]] && rm /etc/modules-load.d/dietpi-c4-kodi.conf
 
 		fi
 
