@@ -57,6 +57,7 @@
 	# G_HW_MODEL 22 Generic Device
 	# G_HW_MODEL 21 x86_64 PC
 	# G_HW_MODEL 20 x86_64 VM
+	# G_HW_MODEL 16 Odroid C4
 	# G_HW_MODEL 15 Odroid N2
 	# G_HW_MODEL 14 Odroid N1
 	# G_HW_MODEL 13 Odroid U3
@@ -79,7 +80,7 @@
 	# G_HW_CPUID 1 Allwinner H3
 	# G_HW_CPUID 2 Allwinner H5
 	# G_HW_CPUID 3 Rockchip RK3399
-	# G_HW_CPUID 4 Samsung S922X
+	# G_HW_CPUID 4 Amlogic S922X
 	# G_HW_CPUID 5 Allwinner H6
 	# ----------------
 	# G_DISTRO 0 unknown/unsupported
@@ -489,6 +490,10 @@
 			elif (( $G_HW_MODEL == 20 )); then
 
 				G_HW_MODEL_NAME='Virtual Machine'
+
+			elif (( $G_HW_MODEL == 16 )); then
+
+				G_HW_MODEL_NAME='Odroid C4'
 
 			elif (( $G_HW_MODEL == 15 )); then
 
