@@ -23,8 +23,8 @@
 	#/////////////////////////////////////////////////////////////////////////////////////
 	# Main Loop
 	#/////////////////////////////////////////////////////////////////////////////////////
-	# RPi + Odroid N2
-	if (( $G_HW_MODEL < 10 || $G_HW_MODEL == 15 )); then
+	# RPi + Odroid N2 + Odroid C4
+	if (( $G_HW_MODEL < 10 || $G_HW_MODEL == 15 || $G_HW_MODEL == 16 )); then
 
 		kodi --standalone
 
